tests/specs/class_generic_extends_implements.txt
# mod.ts
export class Class<A, B> extends Map<A, B> implements Iterator<A>, Iterable<B> {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class<A, B> extends Map<A, B> implements Iterator<A>, Iterable<B> {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

class Class<A, B> extends Map<A, B> implements Iterator<A>, Iterable<B>



# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "Class",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "isAbstract": false,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [],
            "extends": "Map",
            "implements": [
              {
                "repr": "Iterator",
                "kind": "typeRef",
                "value": {
                  "typeParams": [
                    {
                      "repr": "A",
                      "kind": "typeRef",
                      "value": {
                        "typeParams": null,
                        "typeName": "A"
                      }
                    }
                  ],
                  "typeName": "Iterator"
                }
              },
              {
                "repr": "Iterable",
                "kind": "typeRef",
                "value": {
                  "typeParams": [
                    {
                      "repr": "B",
                      "kind": "typeRef",
                      "value": {
                        "typeParams": null,
                        "typeName": "B"
                      }
                    }
                  ],
                  "typeName": "Iterable"
                }
              }
            ],
            "typeParams": [
              {
                "name": "A"
              },
              {
                "name": "B"
              }
            ],
            "superTypeParams": [
              {
                "repr": "A",
                "kind": "typeRef",
                "value": {
                  "typeParams": null,
                  "typeName": "A"
                }
              },
              {
                "repr": "B",
                "kind": "typeRef",
                "value": {
                  "typeParams": null,
                  "typeName": "B"
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
